# fake-service

./: .bazelrc  .gitignore  .releaserc.json  BUILD.bazel  CODEOWNERS  Dockerfile  GNUmakefile  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  repositories.bzl
.github/workflows/: ci.yaml  release.yaml
bazel/oci/: images.bzl
bazel/stamp_tags/: stamp_tags.bzl
cmd/server/: BUILD.bazel  main.go
tools/: get_workspace_status.sh
